# OpenglandFreetype

./: CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
src/: textRender.cpp
